<resources>
    <string name="app_name">M7019E_MovieDBApp</string>
    <string name="action_load_popular_movies">Popular Movies</string>
    <string name="action_load_top_rated_movies">Top Rated Movies</string>
    <string name="action_load_saved_movies">Saved Movies</string>

    <string name="movie_list_fragment_label">Movie List Fragment</string>
    <string name="movie_detail_fragment_label">Movie Detail Fragment</string>
    <string name="reviews_video_label">Reviews and Videos</string>
    <string name="back_label">Back</string>
    <string name="placeholder_text">PLACEHOLDER TEXT</string>
    <string name="movies_are_being_loaded">Movies Are being loaded</string>
    <string name="movie_review_label">Movie Reviews</string>
    <string name="movie_trailers_label">Movie trailers</string>
    <string name="favourite">Favourite</string>
    <string name="remove_favourite">Remove favourite</string>

</resources>