<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="movie"
            type="com.ltu.m7019e.m7019e_moviedbapp.model.Movie" />
        <variable
            name="movieDetail"
            type="com.ltu.m7019e.m7019e_moviedbapp.model.MovieDetail" />
        <variable
            name="viewmodel"
            type="com.ltu.m7019e.m7019e_moviedbapp.viewmodel.MovieDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetailFragment">

        <ImageView
            android:id="@+id/movie_detail_backdrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backdropImageUrl="@{movie.backdropPath}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="Shows movie backdrop" />

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{movie.title}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_backdrop"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/movie_detail_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:layout_constraintStart_toStartOf="@id/movie_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_title"
            tools:text="Genres" />

        <TextView
            android:id="@+id/movie_detail_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/movie_detail_genres"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_genres"
            tools:text="Homepage" />

        <TextView
            android:id="@+id/movie_detail_imdb_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/movie_detail_homepage"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_homepage"
            tools:text="IMDB_id" />

        <Button
            android:id="@+id/next_to_third_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_video_label"
            app:layout_constraintBottom_toTopOf="@+id/back_to_movie_list"
            app:layout_constraintEnd_toEndOf="@+id/back_to_movie_list"
            app:layout_constraintStart_toStartOf="@+id/back_to_movie_list" />

        <Button
            android:id="@+id/back_to_movie_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/back_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_to_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewmodel.onSaveMovieButtonClicked(movie)}"
            android:visibility="@{viewmodel.isFavourite() ? View.GONE : View.VISIBLE}"
            android:text="@string/favourite"
            app:layout_constraintBottom_toTopOf="@+id/next_to_third_fragment"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/remove_from_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewmodel.onRemoveMovieButtonClicked(movie)}"
            android:visibility="@{viewmodel.isFavourite() ? View.VISIBLE : View.GONE}"
            android:text="@string/remove_favourite"
            app:layout_constraintBottom_toTopOf="@+id/next_to_third_fragment"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/details_status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/save_to_database"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_imdb_id"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>